# CMS-ML-MASS

./: .gitignore  compare_models.py
bdtg_dnn/: .run_mass.cpp.swo  .running_properties.cpp.swo  .running_properties.cpp.swp  CMakeLists.txt  analysis.cpp  application.cpp  background_data.root  mass_output_dir  output_dir  process_mass.cpp  run_bulk.cpp  run_mass.cpp  run_mass_no_precut  run_mass_no_precut.cpp  run_properties.cpp  run_single.cpp  running_properties.cpp  signal_data.root  slice_up_tree.cpp  tree_output_dir
gnn/: background_data.root  common.py  data_dir  generate_csvs.py  generate_model.py  gnn_outs  interactions.csv  jet_members.csv  load_model.py  mass_run.py  members.csv  muon_members.csv  muon_muon_interactions.csv  normalization_data.json  normalization_data_jets.json  run_model.py  signal_data.root
gnn/lib/: common.py  generate_csvs.py  models.py
